--- a/proyecto-programacion/src/main/resources/co/edu/uniquindio/proyectoprogramacion/Administrador-view.fxml
+++ b/proyecto-programacion/src/main/resources/co/edu/uniquindio/proyectoprogramacion/Administrador-view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="co.edu.uniquindio.proyectoprogramacion.AdministradosView"
+            fx:controller="co.edu.uniquindio.proyectoprogramacion.viewcontroller.AdministradorViewController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
