--- a/proyecto-programacion/src/main/resources/co/edu/uniquindio/proyectoprogramacion/Medico-view.fxml
+++ b/proyecto-programacion/src/main/resources/co/edu/uniquindio/proyectoprogramacion/Medico-view.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="co.edu.uniquindio.proyectoprogramacion.MedicoView"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectoprogramacion.viewcontroller.MedicoViewController">
+   <children>
+      <Pane layoutY="3.0" prefHeight="394.0" prefWidth="600.0">
+         <children>
+            <Pane layoutY="-6.0" prefHeight="94.0" prefWidth="600.0" style="-fx-background-color: #3b66c4;" />
+            <Label layoutX="161.0" layoutY="142.0" text="Correo" />
+            <Label layoutX="137.0" layoutY="176.0" text="Contraseña" />
+            <TextField fx:id="txtCorreoDoc" layoutX="225.0" layoutY="138.0" />
+            <TextField fx:id="txtContrasenaDoc" layoutX="225.0" layoutY="172.0" />
+            <Button fx:id="btnIngresoDoc" layoutX="264.0" layoutY="227.0" mnemonicParsing="false" text="Ingresar" />
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
