--- a/proyecto-programacion/src/main/resources/co/edu/uniquindio/proyectoprogramacion/Paciente-view.fxml
+++ b/proyecto-programacion/src/main/resources/co/edu/uniquindio/proyectoprogramacion/Paciente-view.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="co.edu.uniquindio.proyectoprogramacion.PacienteView"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectoprogramacion.viewcontroller.PacienteViewController">
+   <children>
+      <Pane prefHeight="116.0" prefWidth="600.0" style="-fx-background-color: #3b66c4;" />
+      <TextField fx:id="txtCedulaPaciente" layoutX="225.0" layoutY="172.0" prefHeight="26.0" prefWidth="150.0" />
+      <Label layoutX="160.0" layoutY="177.0" text="Cedula" />
+      <Label layoutX="148.0" layoutY="218.0" text="Contraseña" />
+      <TextField fx:id="txtContrasenaPaciente" layoutX="225.0" layoutY="214.0" />
+      <Button fx:id="btnIngresoPaciente" layoutX="258.0" layoutY="256.0" mnemonicParsing="false" text="Ingresar" />
+   </children>
 </AnchorPane>
