--- a/proyecto-programacion/src/main/resources/co/edu/uniquindio/proyectoprogramacion/Registro-view.fxml
+++ b/proyecto-programacion/src/main/resources/co/edu/uniquindio/proyectoprogramacion/Registro-view.fxml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="co.edu.uniquindio.proyectoprogramacion.RegistroView"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="508.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyectoprogramacion.viewcontroller.RegistroViewController">
+   <children>
+      <Pane layoutX="-3.0" prefHeight="400.0" prefWidth="543.0">
+         <children>
+            <Pane layoutX="1.0" layoutY="94.0" prefHeight="77.0" prefWidth="212.0" style="-fx-background-color: #3b66c4;" />
+            <ImageView fitHeight="329.0" fitWidth="540.0" layoutX="2.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../Downloads/fondo.jpg" />
+               </image>
+            </ImageView>
+            <Pane layoutX="85.0" layoutY="311.0" opacity="0.64" prefHeight="25.0" prefWidth="124.0" style="-fx-background-color: #ffffff;" />
+            <Pane layoutX="135.0" layoutY="271.0" opacity="0.64" prefHeight="25.0" prefWidth="74.0" style="-fx-background-color: #ffffff;" />
+            <Pane layoutX="162.0" layoutY="238.0" opacity="0.64" prefHeight="25.0" prefWidth="47.0" style="-fx-background-color: #ffffff;" />
+            <Pane layoutX="89.0" layoutY="197.0" opacity="0.64" prefHeight="25.0" prefWidth="115.0" style="-fx-background-color: #ffffff;" />
+            <Pane layoutX="130.0" layoutY="160.0" opacity="0.64" prefHeight="25.0" prefWidth="74.0" style="-fx-background-color: #ffffff;" />
+            <Pane layoutX="135.0" layoutY="120.0" opacity="0.64" prefHeight="25.0" prefWidth="74.0" style="-fx-background-color: #ffffff;" />
+            <Pane layoutX="135.0" layoutY="83.0" opacity="0.64" prefHeight="25.0" prefWidth="74.0" style="-fx-background-color: #ffffff;" />
+            <Label layoutX="147.0" layoutY="87.0" prefHeight="17.0" prefWidth="54.0" text="Nombres" />
+            <Label layoutX="147.0" layoutY="124.0" prefHeight="17.0" prefWidth="54.0" text="Apellidos" textFill="#151515" />
+            <Label layoutX="147.0" layoutY="164.0" prefHeight="17.0" prefWidth="54.0" text="Cedula" />
+            <Label layoutX="92.0" layoutY="201.0" prefHeight="17.0" prefWidth="115.0" text="Fecha de nacimiento" />
+            <DatePicker fx:id="fechaNacimiento" layoutX="211.0" layoutY="197.0" />
+            <Label layoutX="167.0" layoutY="242.0" text="Correo" />
+            <Label layoutX="144.0" layoutY="275.0" text="Contraseña" />
+            <Label layoutX="90.0" layoutY="315.0" text="Confirmar contraseña" />
+            <TextField fx:id="txtNombre" layoutX="211.0" layoutY="83.0" />
+            <TextField fx:id="txtApellido" layoutX="211.0" layoutY="120.0" />
+            <TextField fx:id="txtCedula" layoutX="211.0" layoutY="160.0" />
+            <TextField fx:id="txtCorreo" layoutX="211.0" layoutY="238.0" />
+            <PasswordField fx:id="txtContrasena" layoutX="211.0" layoutY="271.0" />
+            <PasswordField fx:id="txtConfirmar" layoutX="211.0" layoutY="311.0" />
+            <Pane prefHeight="77.0" prefWidth="543.0" style="-fx-background-color: #3b66c4;" />
+            <Button fx:id="btnRegistro" layoutX="246.0" layoutY="344.0" mnemonicParsing="false" text="Registrar" />
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
